# RayTracer

./: CMakeLists.txt  README.md
src/: camera.h  cone.h  cube.h  hitable.h  hitable_list.h  light.cpp  light.h  main.cc  material.h  sphere.h  triangle.h  vec3.h
